# telex-post-craft-agent

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  api.py  config.py  extractor.py  generator.py  message_parser.py  processor.py
src/: api.py  extractor.py  generator.py  message_parser.py  models.py  processor.py
