[project]
name = "postcraft-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.120.4",
    "google-genai>=1.47.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic>=2.12.3",
    "python-decouple>=3.8",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
